htmllerim guncelleme ile yuklenmis

--- a/iletisim.html
+++ b/iletisim.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8">
-    <title>İletişim Sayfası</title>
-    <link rel="stylesheet" href="css/iletisim.css"> <!-- CSS dosyası -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+<link rel="stylesheet" href="css/iletisim.css">
+<meta charset="UTF-8"> 
+<title>İLETİŞİM</title>	
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-*************" crossorigin="anonymous" />
 
 </head>
 <body>
 <div class="menu-container">
-  <ul class="menu">
-    <li><a href="index.html">Anasayfa</a></li>
-    <li><a href="egitimSayfa.html">Cv</a></li>
-    <li><a href="sehrim.html">Şehrim</a></li>
-    <li><a href="ilgi.html">İlgi Alanlarım</a></li>
-    <li><a href="">İletişim</a></li>
-  </ul>
-  <div class="social-icons">
-    <a href="https://www.instagram.com/8s.mehdi/" target="_blank"><i class="fab fa-instagram"></i></a>
-    <a href="https://github.com/mehdi8s" target="_blank"><i class="fab fa-github"></i></a>
+    <ul class="menu navbar navbar-expand-lg navbar-dark bg-dark">
+      <li class="nav-item"><a class="nav-link" href="index.html">Anasayfa</a></li>
+      <li class="nav-item"><a class="nav-link" href="egitimSayfa.html">Cv</a></li>
+      <li class="nav-item"><a class="nav-link" href="sehrim.html">Şehrim</a></li>
+      <li class="nav-item"><a class="nav-link" href="ilgi.html">İlgi Alanlarım</a></li>
+      <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+      <li class="nav-item"><a class="nav-link" href="">İletişim</a></li>
+    </ul>
+    <div class="social-icons">
+      <a href="https://www.instagram.com/8s.mehdi/" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://github.com/mehdi8s" target="_blank"><i class="fab fa-github"></i></a>
+    </div>
   </div>
-</div>
 
     <h1>İletişim Formu</h1>
 
@@ -72,5 +75,9 @@
         }
       });
     </script>
+	
+
+
+
 </body>
 </html>
