--- a/sehrim.html
+++ b/sehrim.html
@@ -2,26 +2,29 @@
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
     <title>AHWAZ</title>
-    <link rel="stylesheet" href="css/sehrim.css"> <!-- CSS dosyası -->
+   	 <link rel="stylesheet" href="css/sehrim.css"> <!-- CSS dosyası -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-*************" crossorigin="anonymous" />
-
 </head>
 <body>
 <div class="menu-container">
-  <ul class="menu">
-    <li><a href="girisSayfa.html">Anasayfa</a></li>
-    <li><a href="egitimSayfa.html">Cv</a></li>
-    <li><a href="">Şehrim</a></li>
-    <li><a href="#about">İlgi Alanlarım</a></li>
-    <li><a href="#sports">İletişim</a></li>
-  </ul>
-  <div class="social-icons">
-    <a href="https://www.instagram.com/8s.mehdi/" target="_blank"><i class="fab fa-instagram"></i></a>
-    <a href="https://github.com/mehdi8s" target="_blank"><i class="fab fa-github"></i></a>
+    <ul class="menu navbar navbar-expand-lg navbar-dark bg-dark">
+      <li class="nav-item"><a class="nav-link" href="index.html">Anasayfa</a></li>
+      <li class="nav-item"><a class="nav-link" href="egitimSayfa.html">Cv</a></li>
+      <li class="nav-item"><a class="nav-link" href="">Şehrim</a></li>
+      <li class="nav-item"><a class="nav-link" href="ilgi.html">İlgi Alanlarım</a></li>
+      <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+      <li class="nav-item"><a class="nav-link" href="iletisim.html">İletişim</a></li>
+    </ul>
+    <div class="social-icons">
+      <a href="https://www.instagram.com/8s.mehdi/" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://github.com/mehdi8s" target="_blank"><i class="fab fa-github"></i></a>
+    </div>
   </div>
-</div>
+
 
 
  
@@ -35,7 +38,7 @@
         <img src="img/ahwaz1.jpg" alt="Slide 1">
         <div class="content">
           <div class="text-container">
-            <h2><b><i>AHWAZ:</b></i><br><br>Ahvaz (Farsça: اهواز), İran'da Huzistan Eyaletinde olan şehir.<br><br>Şehir tam ortasinda Karun Nehri'nin kıyısında kuruludur.<br><br>İranın en sıcak şehridir<br><br>Petrol ve Doğalgazdan zengindir<br><br> nüfusu : 1.350.000</h2>
+            <h2><b><i>AHWAZ:</b></i></h2><br><br><h3 style="text-align: center;">Ahwaz (Farsça: اهواز), İran'da Huzistan Eyaletinde olan şehir.<br><br>Şehir tam ortasinda Karun Nehri'nin kıyısında kuruludur.<br><br>İranın en sıcak şehridir<br><br>Petrol ve Doğalgazdan zengindir<br><br> nüfusu : 1.350.000</h3>
           </div>
         </div>
       </a>
@@ -46,7 +49,7 @@
         <img src="img/ahwaz2.jpg" >
         <div class="content">
           <div class="text-container">
-            <h2><b><i>Karun Nehri:</b></i><br><br>İranın en uzun nehri 950 km ununluğundadır<br><br>Ülkenin 8 ilini kapsamaktadır<br><br>Ülkede Tarım ve tuzrizim açısından önemli bir rolu vardır</h2>
+            <h2><b><i>Karun Nehri:</b></i></h2><br><br><h3 style="text-align: center;">İranın en uzun nehri 950 km ununluğundadır<br><br>Ülkenin 8 ilini kapsamaktadır<br><br>Ülkede Tarım ve tuzrizim açısından önemli bir rolu vardır</h3>
           </div>
         </div>
       </a>
@@ -86,7 +89,8 @@
  <script src="js/sehrim.js"></script>
 <h2>Takımımız</h2>
   <p><h3>Şehrin futbol takımını tanımak için aşağıdaki linke tıklayabilirsiniz:</h3></p>
-  <a href="takimimiz.html">Takımımızı Keşfedin</a><br>
+ <a href="takimimiz.html" style="color: black;">Takımımızı Keşfedin</a>
+
 
    
 
