--- a/takimimiz.html
+++ b/takimimiz.html
@@ -9,7 +9,7 @@
 <body>
 <div class="menu-container">
   <ul class="menu">
-    <li><a href="girisSayfa.html">Anasayfa</a></li>
+    <li><a href="index.html">Anasayfa</a></li>
    
   </ul>
   <div class="social-icons">
@@ -50,5 +50,6 @@
     <iframe src="https://fcstats.com/table,premier-league-iran,103,1.php" width="100%" height="500px" frameborder="0" scrolling="auto"></iframe>
   </div>
   </div>
+  
 </body>
 </html>
